update gradle and docker